# advent-of-code-python

./: README.md  pyproject.toml
solutions-2024/day2/: __main__.py
solutions-2024/day3/: __main__.py
solutions-2025/day1/: __main__.py  input.txt
solutions-2025/day2/: __main__.py  input.txt
solutions-2025/day3/: __main__.py  input.txt
